# protoc-gen-validate

./: README.md
cmd/protoc-gen-validate-csharp/: BUILD  main.go
templates/: pkg.go
templates/csharp/: BUILD.bazel  any.go  bool.go  bytes.go  duration.go  enum.go  exception.go  file.go  map.go  message.go  msg.go  none.go  num.go  oneof.go  register.go  repeated.go  required.go  string.go  timestamp.go  utils.go  wrapper.go
tests/harness/csharp/: README.md
