load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "any.go",
        "bool.go",
        "bytes.go",
        "duration.go",
        "enum.go",
        "exception.go",
        "file.go",
        "map.go",
        "message.go",
        "msg.go",
        "none.go",
        "num.go",
        "oneof.go",
        "register.go",
        "repeated.go",
        "required.go",
        "string.go",
        "timestamp.go",
        "utils.go",
        "wrapper.go",
    ],
    importpath = "github.com/envoyproxy/protoc-gen-validate/templates/csharp",
    visibility = ["//visibility:public"],
    deps = [
        "//templates/shared:go_default_library",
        "@com_github_iancoleman_strcase//:go_default_library",
        "@com_github_lyft_protoc_gen_star_v2//:go_default_library",
        "@com_github_lyft_protoc_gen_star_v2//lang/go:go_default_library",
        "@org_golang_google_protobuf//types/known/durationpb:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)
